# oracle-contracts-solana

./: LICENSE  README.md
programs/opendid-oracle/: Cargo.toml
programs/opendid-oracle/src/: errors.rs  events.rs  lib.rs
programs/opendid-oracle/src/instructions/: create_job_ovn_mapping.rs  get_claim_fee.rs  get_job_ovn_mapping.rs  get_job_ovns.rs  get_messaging_fee.rs  mod.rs  set_claim_fee.rs  set_expiry_time.rs  set_messaging_fee.rs  update_job_ovn_mapping.rs
programs/opendid-oracle/src/instructions/admin/: init_oracle.rs  init_oracle_job_ovn.rs  manage_fee_setter.rs  manage_operator.rs  mod.rs  transfer_admin.rs  withdraw_fee.rs
programs/opendid-oracle/src/instructions/oapp/: cancel_oracle_request.rs  commit_claim.rs  fulfill_oracle_request.rs  mod.rs  oracle_request.rs  quote.rs
programs/opendid-oracle/src/state/: claim_fee.rs  job_ovn_mapping.rs  messaging_fee.rs  mod.rs  oracle.rs
programs/opendid-oracle/src/state/oapp/: claim.rs  commitment.rs  mod.rs
