[package]
name = "opendid-oracle"
version = "0.1.0"
description = "opendid oracle contracts"
edition = "2025"

[lib]
crate-type = ["cdylib", "lib"]
name = "opendid_oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = {version ="0.31.1", features = ["init-if-needed","event-cpi"]}

